# python_playground

./: .gitignore  README.md  pyproject.toml
ab-delta/: main.py
ast/: README.md  main.py
base-policy-bandit/: README.md  bandit.ipynb
bert-mask/: mask.py  pyproject.toml
bert_ner/: bert_ner.ipynb
botter/: .gitignore  README.md  botter.ipynb
chive-magnitude/: chive.py  pyproject.toml
effective-python/: main.py  pyproject.toml
effective-python/42/: main.py
effective-python/43/: main.py
effective-python/46/: main.py
effective-python/46/48/: main.py
effective-python/49/: main.py
effective-python/65/: main.py
effective-python/66/: main.py
effective-python/76/: utils.py  utils_test.py
effective-python/78/: utils.py
effective-python/79/: utils.py
effective-python/try/: main.py
es-ltr/: .gitignore  Dockerfile  Makefile  base_client.py  docker-compose.yml  download.py  elasticsearch.yml  es-ltr.ipynb  es_client.py  fmap.txt  judgement.py  tmdb_settings.json
es-ltr/eskeeper/: eskeeper.yml  tmdb.json
ginza-dependency/: ginza.ipynb  pyproject.toml
handle_mysql/: Makefile  README.md  alembic.ini  docker-compose.yml  main.py
ir-bandits/: cascading-bandits.ipynb  comb-cascading-bandits.ipynb  linucb-with-query.ipynb
llm-dataset/: .gitignore  Makefile  docker-compose.yml  eval.py  gen_dataset.py  gen_dataset_openai.py  gen_dataset_openai_batch.py  gen_dataset_vertex.py  gen_dataset_vertex_batch.py  gen_queries.py  mapping.json  pyproject.toml
llm-dataset/notebook/: openai.ipynb  vertex.ipynb
llm-dataset/tasks/: queries.py
llm-dataset/tasks/llm/: openai.py  vertex.py
llm-dataset/tasks/upload/: gcs.py  openai.py
medex-mecab/: Dockerfile  dnorm.py  pyproject.toml  sample.txt  sample_output.txt
mlessence/: main.py  pyproject.toml
multi-armed-bandit/: README.md  mab1.ipynb  mab2.ipynb
pandas-playground/: pandas.ipynb
pipe/: first.py  secound.py
pool-share-memory/: main.py
pool-share-memory/with-manager/: main.py
practical-recommender-systems/: rec.ipynb
practical-recommender-systems/src/: association_recommender.py  base_recommender.py  bpr.py  fm.py  imf.py  popular_recommender.py  random.py
practical-recommender-systems/util/: data_loader.py  metric_calculator.py  models.py
programming-collective-inteligence/: README.md
programming-collective-inteligence/ch2/: ch2.ipynb
py-ir/: appendix.ipynb  chapter00.py  chapter01.ipynb  chapter01.py  chapter02.ipynb  chapter02.py  chapter03.ipynb  chapter03.py  chapter04.ipynb  chapter04.py  chapter05.ipynb  chapter05.py  chapter06.ipynb  chapter07.ipynb  chapter08.ipynb  chapter08.py  chapter09.ipynb  chapter09.py  chapter10.ipynb  chapter10.py  pyproject.toml
query-segmenter/: main.py
rec-example/: example.csv  implicit.ipynb  pyproject.toml  rec.ipynb
reranker/: reranker.ipynb
rnn-text/: pyproject.toml  rnn.ipynb
slack/: main.py  pyproject.toml  requirements.txt
text-encording/: .gitignore  main.py  pyproject.toml
tfds/: tfds-context.ipynb  tfds-search.ipynb
tfds/data/: data.npz  itemattr.npz
torchnlp/: README.md  pytorch_nlp_1.ipynb  pytorch_nlp_ch3_1.ipynb  pytorch_nlp_ch3_2.ipynb  pytorch_nlp_ch4_1.ipynb  try_sentence_bert_1.ipynb
try-airflow/: publish_sales.py  pyproject.toml  python_operator.py  sample_dag.py  topic_schema.yaml
try-faiss/: faiss.ipynb
try-gokart/: gokart.ipynb
try-pyterrier/: .gitignore  ch1.ipynb  ch2.ipynb  sudachi.ipynb
try-s3/: main.py
(+10 files in other folders)
