[tool.poetry]
name = "python_playground"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ccxt = "^1.72.37"
joblib = "^1.1.0"
crypto-data-fetcher = {git = "https://github.com/richmanbtc/crypto_data_fetcher.git", rev = "v0.0.17"}
matplotlib = "^3.5.1"
numpy = "^1.22.2"
pandas = "^1.4.0"
seaborn = "^0.11.2"
TA-Lib = "^0.4.24"
scipy = "^1.8.0"
ipykernel = "^6.8.0"
wheel = "^0.37.1"
lightgbm = "^3.3.2"
luigi = "^3.0.3"
gokart = "^1.0.7"
ginza = "^5.1.1"
ja-ginza = "^5.1.0"
python-terrier = "^0.8.0"
fastrank = "^0.7.0"
requests = "^2.27.1"
elasticsearch = "^7.16.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
