[tool.poetry]
name = "bert-mask"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.7.1"
transformers = "^4.2.2"
fugashi = "^1.1.0"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
