[tool.poetry]
name = "medex-mecab"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = "^3.7"
dnorm-j = {git = "https://github.com/sociocom/DNorm-J.git"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
