[tool.poetry]
name = "py-ir"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^3.8.3"
chardet = "^4.0.0"
janome = "^0.4.1"
matplotlib = "^3.3.3"
wordcloud = "^1.8.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
