[tool.poetry]
name = "rnn-text"
version = "0.1.0"
description = ""
authors = ["po3rin"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
beautifulsoup4 = "^4.9.3"
gensim = "^3.8.3"
janome = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
