[tool.poetry]
name = "slack"
version = "0.1.0"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
slackclient = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
